--- a/hashnode-diaries/package.json
+++ b/hashnode-diaries/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "hashnode-client": "file:../package/tar/hashnode-client-0.0.4.tgz",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
