--- a/hashnode-diaries/package.json
+++ b/hashnode-diaries/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "hashnode-client": "file:../package/tar/hashnode-client-0.0.9.tgz",
+    "hashnode-client": "^1.0.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
