--- a/hashnode-diaries/package.json
+++ b/hashnode-diaries/package.json
@@ -13,7 +13,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
