--- a/.github/workflows/repo-rater.yml
+++ b/.github/workflows/repo-rater.yml
@@ -1,4 +1,4 @@
-name: repo-rater
+name: Repo Rater Action
 run-name: repo-rater (#${{ github.event.issue.number || github.event.pull_request.number }})
 
 permissions:
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: xkrishguptaa/action-repo-rater@v1
+      - uses: xkrishguptaa/action-repo-rater@v1.0.6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          pr-message: "Thank you all for contributing to this repo! Please take a moment to rate its DX on [EddieHub Repo Rater](https://repo-rater.eddiehub.io/rate?owner=${{ github.repository_owner }}&name=${{ github.event.repository.name }}) and star it 💓"
